--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=Customer
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://api.customer.localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -13,6 +13,8 @@ APP_MAINTENANCE_DRIVER=file
 APP_MAINTENANCE_STORE=database
 
 BCRYPT_ROUNDS=12
+
+DOCKER_EXTERNAL_NETWORK_NAME=
 
 LOG_CHANNEL=stack
 LOG_STACK=single
