update env example

--- a/.env.example
+++ b/.env.example
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=database
 DB_PORT=5432
 DB_DATABASE=customer
-DB_USERNAME=root
-DB_PASSWORD=
+DB_USERNAME=user
+DB_PASSWORD=password
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
