--- a/compose.yaml
+++ b/compose.yaml
@@ -1,8 +1,8 @@
-name: customer-api
+name: customer
 
 services:
     app:
-        container_name: customer-api-app
+        container_name: customer-app
         restart: unless-stopped
         tty: true
         working_dir: /var/www/html
@@ -20,10 +20,10 @@ services:
         networks:
             - external
         environment:
-            - VIRTUAL_HOST=api.customer-api.localhost
+            - VIRTUAL_HOST=api.customer.localhost
 
     database:
-        container_name: customer-api-database
+        container_name: customer-database
         image: postgres:16.3-alpine
         ports:
             - 54321:5432
@@ -34,7 +34,7 @@ services:
         environment:
             - POSTGRES_PASSWORD=password
             - POSTGRES_USER=user
-            - POSTGRES_DB=customer-api
+            - POSTGRES_DB=customer
 
 networks:
     external:
