--- a/compose.yaml
+++ b/compose.yaml
@@ -39,7 +39,7 @@ services:
 networks:
     external:
         external: true
-        name: ${DOCKER_EXTERNAL_NETWORK_NAME:-default}
+        name: ${DOCKER_EXTERNAL_NETWORK_NAME:-bridge}
 
 volumes:
     customer_data:
